# agent-as-unix-user

./: .gitignore  README.md  architecture.md  prek.toml  pyproject.toml
.github/workflows/: ci-cd.yml
src/agent_as_another_unix_user/: __init__.py  cli.py  config.py  models.py  runner.py  system.py
src/agent_as_another_unix_user/cli/: __init__.py  access.py  delete.py  delete_agent.py  info.py  list_agents.py  new.py  new_agent.py  run.py  run_as_agent.py
src/agent_as_unix_user/: __init__.py  config.py  system.py  utils.py
src/agent_as_unix_user/cli/: __init__.py  delete.py  info.py  list.py  mount.py  new.py  run.py
src/agent_next_door/: __init__.py
tests/: conftest.py  test_cli.py
