[project]
name = "agent-as-another-unix-user"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emmanuel Leblond", email = "emmanuel.leblond@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
]

[project.scripts]
au = "agent_as_another_unix_user:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
