[project]
name = "agent-as-unix-user"
version = "0.1.0"
description = "A barebone sandbox for agentic coding based on UNIX user"
readme = "README.md"
authors = [
    { name = "Emmanuel Leblond", email = "emmanuel.leblond@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
]

[project.scripts]
auu = "agent_as_unix_user:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
